<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <TextView
        android:id="@+id/tv_hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_23"
        android:layout_marginTop="@dimen/dp_50"
        android:text="@string/for_more_service"
        android:textColor="@color/c_fa6a13"
        android:textSize="@dimen/sp_16" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_hello"
        android:layout_marginLeft="@dimen/dp_23"
        android:layout_marginTop="@dimen/dp_9"
        android:text="@string/login_app"
        android:textColor="@color/c_373737"
        android:textSize="@dimen/sp_28" />

    <LinearLayout
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/dp_106"
        android:layout_below="@id/tv_login"
        android:layout_marginLeft="@dimen/dp_23"
        android:layout_marginRight="@dimen/dp_23"
        android:orientation="horizontal"
        android:id="@+id/ll_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@mipmap/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_coutry_code"
            android:text="@string/contry_code"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/c_636363"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_2"
            android:src="@mipmap/select" />

        <EditText
            android:id="@+id/et_phone"
            android:layout_marginLeft="@dimen/dp_16"
            android:background="@null"
            android:hint="@string/input_phone"
            android:inputType="phone"
            android:textColorHint="@color/c_c8c8c8"
            android:textSize="@dimen/sp_16"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_send_verify"
            android:textSize="@dimen/sp_14"
            android:text="@string/send_verify"
            android:textColor="@color/c_fefefe"
            android:background="@drawable/login_btn_unbg"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_30"
            android:padding="@dimen/dp_5"/>
    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_below="@id/ll_container"
        android:layout_marginTop="@dimen/dp_5"
        android:background="@color/c_fa6a13"
        android:layout_marginLeft="@dimen/dp_23"
        android:layout_marginRight="@dimen/dp_23"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"/>

    <LinearLayout
        android:id="@+id/ll_or"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/dp_140"
        android:layout_below="@id/view"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <View
            android:background="@drawable/gra_d8_a9"
            android:layout_width="@dimen/dp_15"
            android:layout_height="@dimen/dp_1"/>

        <TextView
            android:layout_marginLeft="@dimen/dp_5"
            android:text="@string/or"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/c_a9a9a9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <View
            android:layout_marginLeft="@dimen/dp_5"
            android:background="@drawable/gra_a9_d8"
            android:layout_width="@dimen/dp_15"
            android:layout_height="@dimen/dp_1"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/iv_wechat"
        android:src="@mipmap/wechat"
        android:layout_width="@dimen/dp_50"
        android:layout_height="@dimen/dp_50"
        android:layout_below="@id/ll_or"
        android:layout_marginTop="@dimen/dp_5"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/tv_wechat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_wechat"
        android:layout_centerHorizontal="true"
        android:text="@string/login_wechat"
        android:textColor="@color/c_4dAe46"
        android:textSize="@dimen/sp_12" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/tv_protocol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_20"
            android:text="@string/agree_protocol"
            android:textColor="@color/c_a9a9a9"
            android:textSize="@dimen/sp_13" />

        <TextView
            android:id="@+id/tv_agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_20"
            android:text="@string/agree_user"
            android:textColor="@color/splash_rightColor"
            android:textSize="@dimen/sp_13" />

    </LinearLayout>

</RelativeLayout>